fix: topic questions and topic answers instead of "full" route
